--- a/index.html
+++ b/index.html
@@ -1,96 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=15">
-  <style>
-    .project-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:16px}
-    a.project-card{display:flex;flex-direction:column;gap:10px;background:var(--card);padding:16px;border-radius:10px;
-      text-decoration:none;color:var(--text);min-height:260px;transition:background .2s}
-    a.project-card:hover{background:rgba(255,255,255,0.06)}
-    a.project-card img{width:100%;height:160px;object-fit:cover;border-radius:6px;background:#071420;display:block}
-    a.project-card h3{margin:0;font-size:1.05rem;color:var(--accent)}
-    a.project-card p{margin:0;font-size:.85rem;line-height:1.3}
-  </style>
+  <!-- Bootstrap 5 (kept for rubric alignment) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css?v=17">
+  <meta name="description" content="Saimn Zuhairi — aerospace resume and projects: flight dynamics, control systems, prototyping.">
 </head>
 <body class="page-enter theme-home">
+  <a class="visually-hidden-focusable position-absolute top-0 start-0 m-2 p-2 bg-light text-dark rounded" href="#main">Skip to content</a>
+
   <canvas id="starfield" aria-hidden="true"></canvas>
 
-  <header class="navbar">
-    <a class="logo" href="index.html" aria-label="Home"><h1>Saimn Zuhairi</h1></a>
-    <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="experience.html">Experience</a>
-      <a href="contact.html">Contact</a>
+  <header class="navbar px-3">
+    <a class="logo text-decoration-none" href="index.html" aria-label="Home"><h1 class="m-0">Saimn Zuhairi</h1></a>
+    <nav class="ms-auto d-flex gap-3">
+      <a href="index.html" class="active text-decoration-none">Home</a>
+      <a href="projects.html" class="text-decoration-none">Projects</a>
+      <a href="experience.html" class="text-decoration-none">Experience</a>
+      <a href="contact.html" class="text-decoration-none">Contact</a>
     </nav>
   </header>
 
-  <main class="section">
-    <section id="about" class="about-section">
-      <img class="profile-img" src="images/linkedin.jpg" alt="Profile photo" width="400" height="400" loading="eager" fetchpriority="high">
+  <main id="main" class="section container py-4">
+    <section id="about" class="about-section d-flex align-items-center gap-3">
+      <img class="profile-img img-fluid"
+           src="images/linkedin.jpg"
+           alt="Profile photo of Saimn Zuhairi"
+           width="400" height="400"
+           loading="eager" fetchpriority="high">
       <div class="about-text">
         <h2>About Me</h2>
         <p>Hi — I'm Saimn Zuhairi, an aspiring aerospace engineer focusing on flight dynamics, control systems and embedded systems. I work on simulation and physical prototyping (Python, sensors, lightweight mechanisms) and CAD-driven designs. I’m actively seeking internships and entry-level roles — <a href="contact.html">get in touch</a>.</p>
       </div>
     </section>
 
-    <h2>Design Sketches (open a project for full sets)</h2>
-    <section class="sketch-thumbs">
-      <a href="projects/gravity-powered-car.html" class="thumb-link">
-        <img src="images/sketch1.jpg" alt="Gravity car concept sketch" width="480" height="320" loading="lazy">
-        <span>Gravity car — concept</span>
-      </a>
-      <a href="projects/gravity-powered-car.html" class="thumb-link">
-        <img src="images/sketch2.jpg" alt="Ballast cavity sketch" width="480" height="320" loading="lazy">
-        <span>Ballast cavity</span>
-      </a>
-      <a href="projects/flight-path-simulation.html" class="thumb-link">
-        <img src="images/fuelplot.png" alt="Fuel flow plot" width="940" height="559" loading="lazy">
-        <span>Fuel flow plot</span>
-      </a>
-      <a href="projects/portfolio-website.html" class="thumb-link">
-        <img src="images/sketch3.jpg" alt="Portfolio sketch" width="480" height="320" loading="lazy">
-        <span>Portfolio sketch</span>
-      </a>
+    <h2 class="mt-4">Design Sketches (open a project for full sets)</h2>
+    <section class="sketch-thumbs row g-2">
+      <div class="col-6 col-md-3">
+        <a href="projects/gravity-powered-car.html" class="thumb-link d-block text-decoration-none text-light">
+          <img src="images/sketch1.jpg" alt="Gravity car concept sketch" width="480" height="320" loading="lazy" decoding="async" class="img-fluid">
+          <span>Gravity car — concept</span>
+        </a>
+      </div>
+      <div class="col-6 col-md-3">
+        <a href="projects/gravity-powered-car.html" class="thumb-link d-block text-decoration-none text-light">
+          <img src="images/sketch2.jpg" alt="Ballast cavity sketch" width="480" height="320" loading="lazy" decoding="async" class="img-fluid">
+          <span>Ballast cavity</span>
+        </a>
+      </div>
+      <div class="col-6 col-md-3">
+        <a href="projects/flight-path-simulation.html" class="thumb-link d-block text-decoration-none text-light">
+          <img src="images/fuelplot.png" alt="Fuel flow plot" width="940" height="559" loading="lazy" decoding="async" class="img-fluid">
+          <span>Fuel flow plot</span>
+        </a>
+      </div>
+      <div class="col-6 col-md-3">
+        <a href="projects/portfolio-website.html" class="thumb-link d-block text-decoration-none text-light">
+          <img src="images/sketch3.jpg" alt="Portfolio layout sketch" width="480" height="320" loading="lazy" decoding="async" class="img-fluid">
+          <span>Portfolio sketch</span>
+        </a>
+      </div>
     </section>
 
-    <h2>Engineering & Aerospace Projects</h2>
-    <div class="project-grid">
-      <a class="project-card" href="projects/gravity-powered-car.html" data-project="gravity">
-        <img src="images/gravity-prototype.jpg" alt="Gravity car prototype" width="768" height="768" loading="lazy"
-             onerror="this.onerror=null; this.src='images/sketch1.jpg';">
-        <h3>Gravity-Powered Car (Recycled Materials)</h3>
-        <p>Prototype exploring mass distribution & rolling resistance; physical build and sketches.</p>
-      </a>
-
-      <a class="project-card" href="projects/flight-path-simulation.html" data-project="flight">
-        <img src="images/aircraft.jpg" alt="Aircraft for simulation context" width="317" height="159" loading="lazy"
-             onerror="this.onerror=null; this.src='images/fuelplot.png';">
-        <h3>Flight Path Simulation (Python)</h3>
-        <p>RK4 integration + PID experiments; wind & fuel-flow analysis plots.</p>
-      </a>
-
-      <a class="project-card" href="projects/portfolio-website.html" data-project="portfolio">
-        <img src="images/portfolio-code.png?v=3" alt="Portfolio site code screenshot" width="1500" height="900" loading="lazy"
-             onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
-        <h3>Responsive Portfolio Website</h3>
-        <p>Static accessible site with performance-conscious design choices.</p>
-      </a>
+    <h2 class="mt-4">Engineering & Aerospace Projects</h2>
+    <div class="row g-3">
+      <div class="col-md-4">
+        <a class="project-card d-block text-decoration-none" href="projects/gravity-powered-car.html" data-project="gravity">
+          <img src="images/gravity-prototype.jpg" alt="Gravity car prototype" width="768" height="768" loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/sketch1.jpg';">
+          <h3>Gravity-Powered Car (Recycled Materials)</h3>
+          <p>Prototype exploring mass distribution & rolling resistance; physical build and sketches.</p>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a class="project-card d-block text-decoration-none" href="projects/flight-path-simulation.html" data-project="flight">
+          <img src="images/aircraft.jpg" alt="Aircraft for simulation context" width="317" height="159" loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/fuelplot.png';">
+          <h3>Flight Path Simulation (Python)</h3>
+          <p>RK4 integration + PID experiments; wind & fuel-flow analysis plots.</p>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a class="project-card d-block text-decoration-none" href="projects/portfolio-website.html" data-project="portfolio">
+          <img src="images/portfolio-code.png?v=3" alt="Portfolio code screenshot" width="1500" height="900" loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
+          <h3>Responsive Portfolio Website</h3>
+          <p>Static accessible site with performance-conscious design choices.</p>
+        </a>
+      </div>
     </div>
 
-    <h2 style="margin-top:48px;">Latest GitHub Repositories</h2>
+    <h2 class="mt-5">Latest GitHub Repositories</h2>
     <div id="githubRepos" class="repo-grid" aria-live="polite"></div>
   </main>
 
+  <!-- Lightbox: figure contains img+figcaption; img has no src initially -->
   <div id="lightbox" class="lightbox" aria-hidden="true">
+    <figure class="lb-figure" role="group" aria-label="Image viewer">
+      <img id="lbImg" alt="" width="1200" height="800">
+      <figcaption id="lbCaption"></figcaption>
+    </figure>
     <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-    <img id="lbImg" src="" alt="" width="1200" height="800">
-    <figcaption id="lbCaption"></figcaption>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
   <script src="./script.js" defer></script>
 </body>
 </html>
