--- a/projects.html
+++ b/projects.html
@@ -1,60 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Projects — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="./style.css?v=15">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="./style.css?v=17">
   <style>
-    .project-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:16px;margin-top:16px}
-    a.project-card{display:flex;flex-direction:column;gap:10px;background:var(--card);padding:16px;border-radius:10px;
-      text-decoration:none;color:var(--text);min-height:260px;transition:background .2s}
-    a.project-card:hover{background:rgba(255,255,255,0.06)}
-    a.project-card img{width:100%;height:160px;object-fit:cover;border-radius:6px;background:#071420}
-    a.project-card h3{margin:0;font-size:1.05rem;color:var(--accent)}
-    a.project-card p{margin:0;font-size:.85rem;line-height:1.3}
+    .project-grid .project-card{display:flex;flex-direction:column;gap:10px;background:var(--card);padding:16px;border-radius:10px;text-decoration:none;color:var(--text);min-height:260px;transition:background .2s}
+    .project-grid .project-card:hover{background:rgba(255,255,255,0.06)}
+    .project-grid .project-card img{width:100%;height:160px;object-fit:cover;border-radius:6px;background:#071420}
+    .project-grid .project-card h3{margin:0;font-size:1.05rem;color:var(--accent)}
+    .project-grid .project-card p{margin:0;font-size:.85rem;line-height:1.3}
   </style>
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
-  <header class="navbar">
-    <a class="logo" href="index.html" aria-label="Home"><h1>Saimn Zuhairi</h1></a>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html" class="active">Projects</a>
-      <a href="experience.html">Experience</a>
-      <a href="contact.html">Contact</a>
+
+  <header class="navbar px-3">
+    <a class="logo text-decoration-none" href="index.html" aria-label="Home"><h1 class="m-0">Saimn Zuhairi</h1></a>
+    <nav class="ms-auto d-flex gap-3">
+      <a href="index.html" class="text-decoration-none">Home</a>
+      <a href="projects.html" class="active text-decoration-none">Projects</a>
+      <a href="experience.html" class="text-decoration-none">Experience</a>
+      <a href="contact.html" class="text-decoration-none">Contact</a>
     </nav>
   </header>
 
-  <main class="section">
+  <main class="section container py-4">
     <h2>Projects</h2>
     <p>Browse the projects and open a detail page for sketches, images and technical notes.</p>
 
-    <div class="project-grid">
-      <a class="project-card" href="projects/gravity-powered-car.html" data-project="gravity">
-        <img src="images/gravity-prototype.jpg" alt="Gravity car wooden prototype" width="768" height="768" loading="lazy"
-             onerror="this.onerror=null; this.src='images/sketch1.jpg';">
-        <h3>Gravity-Powered Car (Recycled Materials)</h3>
-        <p>Physical prototype + conceptual sketches exploring friction & mass distribution.</p>
-      </a>
-
-      <a class="project-card" href="projects/flight-path-simulation.html" data-project="flight">
-        <img src="images/aircraft.jpg" alt="Aircraft representing simulation" width="317" height="159" loading="lazy"
-             onerror="this.onerror=null; this.src='images/fuelplot.png';">
-        <h3>Flight Path Simulation (Python)</h3>
-        <p>Numerical integration model: wind sensitivity, fuel-flow plots & PID trials.</p>
-      </a>
-
-      <a class="project-card" href="projects/portfolio-website.html" data-project="portfolio">
-        <img src="images/portfolio-code.png?v=3" alt="Portfolio website code screenshot" width="1500" height="900" loading="lazy"
-             onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
-        <h3>Responsive Portfolio Website</h3>
-        <p>Static accessible design with performance-focused JS for subtle animations.</p>
-      </a>
+    <div class="row g-3 project-grid">
+      <div class="col-md-4">
+        <a class="project-card" href="projects/gravity-powered-car.html" data-project="gravity">
+          <img src="images/gravity-prototype.jpg" alt="Gravity car wooden prototype" width="768" height="768" loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/sketch1.jpg';">
+          <h3>Gravity-Powered Car (Recycled Materials)</h3>
+          <p>Physical prototype + conceptual sketches exploring friction & mass distribution.</p>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a class="project-card" href="projects/flight-path-simulation.html" data-project="flight">
+          <img src="images/aircraft.jpg" alt="Aircraft representing simulation" width="317" height="159" loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/fuelplot.png';">
+          <h3>Flight Path Simulation (Python)</h3>
+          <p>Numerical integration model: wind sensitivity, fuel‑flow plots & PID trials.</p>
+        </a>
+      </div>
+      <div class="col-md-4">
+        <a class="project-card" href="projects/portfolio-website.html" data-project="portfolio">
+          <img src="images/portfolio-code.png?v=3" alt="Portfolio website code screenshot" width="1500" height="900" loading="lazy" decoding="async"
+               onerror="this.onerror=null; this.src='images/repo-dashboard.png';">
+          <h3>Responsive Portfolio Website</h3>
+          <p>Static accessible design with performance‑focused JS for subtle animations.</p>
+        </a>
+      </div>
     </div>
   </main>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
   <script src="./script.js" defer></script>
 </body>
 </html>
