--- a/projects/flight-path-simulation.html
+++ b/projects/flight-path-simulation.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Flight Path Simulation — Saimn Zuhairi</title>
-  <link rel="stylesheet" href="../style.css?v=9">
+  <link rel="stylesheet" href="../style.css?v=17">
 </head>
 <body class="page-enter theme-projects">
   <canvas id="starfield" aria-hidden="true"></canvas>
+
   <header class="navbar">
     <a class="logo" href="../index.html" aria-label="Home"><h1>Saimn Zuhairi</h1></a>
     <nav>
@@ -22,39 +23,47 @@
     <h2>Flight Path Simulation (Python)</h2>
 
     <section class="project-media">
+      <h3 class="visually-hidden">Project media</h3>
       <figure>
-        <img src="../images/aircraft.jpg" alt="Representative aircraft for simulation"
-             width="317" height="159" loading="lazy" decoding="async">
-        <figcaption>Representative aircraft for fuel-flow & wind sensitivity.</figcaption>
+        <img src="../images/aircraft.jpg"
+             alt="Representative aircraft for simulation"
+             width="317" height="159" loading="lazy" decoding="async"
+             data-caption="Representative aircraft for fuel‑flow & wind sensitivity."
+             onerror="this.onerror=null; this.src='../images/project2.svg';">
+        <figcaption>Representative aircraft for fuel‑flow & wind sensitivity.</figcaption>
       </figure>
       <figure>
-        <img src="../images/fuelplot.png" alt="Fuel flow vs altitude plot"
-             width="940" height="559" loading="lazy" decoding="async">
+        <img src="../images/fuelplot.png" alt="Fuel flow plot"
+             width="940" height="559" loading="lazy" decoding="async"
+             data-caption="Fuel Flow Plot — altitude vs flow with wind cases.">
         <figcaption>Fuel Flow Plot — altitude vs flow with wind cases.</figcaption>
       </figure>
       <figure>
-        <img src="../images/fuelplot2.png" alt="Additional fuel flow plot variant"
-             width="940" height="562" loading="lazy" decoding="async">
+        <img src="../images/fuelplot2.png" alt="Alternate fuel flow plot"
+             width="940" height="562" loading="lazy" decoding="async"
+             data-caption="Alternate fuel flow plot for comparison.">
         <figcaption>Alternate fuel flow plot for comparison.</figcaption>
       </figure>
     </section>
 
     <section class="project-explanation">
       <h3>Model & assumptions</h3>
-      <p>Simplified point‑mass aircraft; empirical drag; thrust and fuel model; linear lift in operating AoA band.</p>
+      <p>Simplified point‑mass aircraft; empirical drag; thrust/fuel; linear lift in operating AoA.</p>
       <h3>Numerical method</h3>
       <p>RK4 fixed‑step integrator; PID trials for altitude/heading hold under changing wind vectors.</p>
       <h3>How to run</h3>
-      <p>Dependencies: numpy, matplotlib.<br>Example: <code>python3 simulate.py --altitude 34000 --wind -20</code>.</p>
+      <p>Dependencies: numpy, matplotlib. Example: <code>python3 simulate.py --altitude 34000 --wind -20</code>.</p>
     </section>
 
     <a class="btn" href="../projects.html">Back to projects</a>
   </main>
 
   <div id="lightbox" class="lightbox" aria-hidden="true">
+    <figure class="lb-figure" role="group" aria-label="Image viewer">
+      <img id="lbImg" alt="" width="1200" height="800">
+      <figcaption id="lbCaption"></figcaption>
+    </figure>
     <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-    <img id="lbImg" src="" alt="" width="1200" height="800">
-    <figcaption id="lbCaption"></figcaption>
   </div>
 
   <script src="../script.js" defer></script>
