--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
   </main>
 
   <!-- Lightbox: figure contains img+figcaption; img has no src initially -->
-  <div id="lightbox" class="lightbox" aria-hidden="true">
-    <figure class="lb-figure" role="group" aria-label="Image viewer">
-      <img id="lbImg" alt="" width="1200" height="800">
-      <figcaption id="lbCaption"></figcaption>
-    </figure>
-    <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-  </div>
-
+ <div id="lightbox" class="lightbox" aria-hidden="true">
+  <figure class="lb-figure" role="group" aria-label="Image viewer">
+    <img id="lbImg" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="" width="1200" height="800">
+    <figcaption id="lbCaption"></figcaption>
+  </figure>
+  <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
+</div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
   <script src="./script.js" defer></script>
 </body>
