--- a/projects/portfolio-website.html
+++ b/projects/portfolio-website.html
@@ -55,12 +55,12 @@
 
   <!-- Lightbox fixed for W3C: figure inside overlay; img has no empty src -->
   <div id="lightbox" class="lightbox" aria-hidden="true">
-    <figure class="lb-figure" role="group" aria-label="Image viewer">
-      <img id="lbImg" alt="" width="1200" height="800">
-      <figcaption id="lbCaption"></figcaption>
-    </figure>
-    <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-  </div>
+  <figure class="lb-figure" role="group" aria-label="Image viewer">
+    <img id="lbImg" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="" width="1200" height="800">
+    <figcaption id="lbCaption"></figcaption>
+  </figure>
+  <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
+</div>
 
   <script src="../script.js" defer></script>
 </body>
