--- a/projects/flight-path-simulation.html
+++ b/projects/flight-path-simulation.html
@@ -58,13 +58,13 @@
     <a class="btn" href="../projects.html">Back to projects</a>
   </main>
 
-  <div id="lightbox" class="lightbox" aria-hidden="true">
-    <figure class="lb-figure" role="group" aria-label="Image viewer">
-      <img id="lbImg" alt="" width="1200" height="800">
-      <figcaption id="lbCaption"></figcaption>
-    </figure>
-    <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-  </div>
+ <div id="lightbox" class="lightbox" aria-hidden="true">
+  <figure class="lb-figure" role="group" aria-label="Image viewer">
+    <img id="lbImg" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="" width="1200" height="800">
+    <figcaption id="lbCaption"></figcaption>
+  </figure>
+  <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
+</div>
 
   <script src="../script.js" defer></script>
 </body>
