--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home — Saimn Zuhairi</title>
-  <!-- Bootstrap 5 (kept for rubric alignment) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./style.css?v=17">
-  <meta name="description" content="Saimn Zuhairi — aerospace resume and projects: flight dynamics, control systems, prototyping.">
+  <link rel="stylesheet" href="./style.css?v=18">
+  <meta name="description" content="Aerospace-focused portfolio: projects, simulation, prototyping, résumé.">
 </head>
 <body class="page-enter theme-home">
   <a class="visually-hidden-focusable position-absolute top-0 start-0 m-2 p-2 bg-light text-dark rounded" href="#main">Skip to content</a>
@@ -38,31 +37,24 @@
     </section>
 
     <h2 class="mt-4">Design Sketches (open a project for full sets)</h2>
-    <section class="sketch-thumbs row g-2">
-      <div class="col-6 col-md-3">
-        <a href="projects/gravity-powered-car.html" class="thumb-link d-block text-decoration-none text-light">
-          <img src="images/sketch1.jpg" alt="Gravity car concept sketch" width="480" height="320" loading="lazy" decoding="async" class="img-fluid">
-          <span>Gravity car — concept</span>
-        </a>
-      </div>
-      <div class="col-6 col-md-3">
-        <a href="projects/gravity-powered-car.html" class="thumb-link d-block text-decoration-none text-light">
-          <img src="images/sketch2.jpg" alt="Ballast cavity sketch" width="480" height="320" loading="lazy" decoding="async" class="img-fluid">
-          <span>Ballast cavity</span>
-        </a>
-      </div>
-      <div class="col-6 col-md-3">
-        <a href="projects/flight-path-simulation.html" class="thumb-link d-block text-decoration-none text-light">
-          <img src="images/fuelplot.png" alt="Fuel flow plot" width="940" height="559" loading="lazy" decoding="async" class="img-fluid">
-          <span>Fuel flow plot</span>
-        </a>
-      </div>
-      <div class="col-6 col-md-3">
-        <a href="projects/portfolio-website.html" class="thumb-link d-block text-decoration-none text-light">
-          <img src="images/sketch3.jpg" alt="Portfolio layout sketch" width="480" height="320" loading="lazy" decoding="async" class="img-fluid">
-          <span>Portfolio sketch</span>
-        </a>
-      </div>
+    <section class="sketch-thumbs" aria-labelledby="sketches-heading">
+      <h3 id="sketches-heading" class="visually-hidden">Design Sketch Thumbnails</h3>
+      <a href="projects/gravity-powered-car.html" class="thumb-link">
+        <img src="images/sketch1.jpg" alt="Gravity car concept sketch" width="480" height="320" loading="lazy" decoding="async">
+        <span>Gravity car — concept</span>
+      </a>
+      <a href="projects/gravity-powered-car.html" class="thumb-link">
+        <img src="images/sketch2.jpg" alt="Ballast cavity sketch" width="480" height="320" loading="lazy" decoding="async">
+        <span>Ballast cavity</span>
+      </a>
+      <a href="projects/flight-path-simulation.html" class="thumb-link">
+        <img src="images/fuelplot.png" alt="Fuel flow plot" width="940" height="559" loading="lazy" decoding="async">
+        <span>Fuel flow plot</span>
+      </a>
+      <a href="projects/portfolio-website.html" class="thumb-link">
+        <img src="images/sketch3.jpg" alt="Portfolio layout sketch" width="480" height="320" loading="lazy" decoding="async">
+        <span>Portfolio sketch</span>
+      </a>
     </section>
 
     <h2 class="mt-4">Engineering & Aerospace Projects</h2>
@@ -97,15 +89,18 @@
     <div id="githubRepos" class="repo-grid" aria-live="polite"></div>
   </main>
 
-  <!-- Lightbox: figure contains img+figcaption; img has no src initially -->
- <div id="lightbox" class="lightbox" aria-hidden="true">
-  <figure class="lb-figure" role="group" aria-label="Image viewer">
-    <img id="lbImg" src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==" alt="" width="1200" height="800">
-    <figcaption id="lbCaption"></figcaption>
-  </figure>
-  <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
-</div>
-  
+  <!-- Lightbox with placeholder src to satisfy validator -->
+  <div id="lightbox" class="lightbox" aria-hidden="true">
+    <figure class="lb-figure" role="group" aria-label="Image viewer">
+      <img id="lbImg"
+           src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw=="
+           alt=""
+           width="1200" height="800" loading="lazy" decoding="async">
+      <figcaption id="lbCaption"></figcaption>
+    </figure>
+    <button id="lbClose" class="lb-close" aria-label="Close">✕</button>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
   <script src="./script.js" defer></script>
 </body>
